[project]
name = "inference-core-nodes"
dynamic = ["version"]
description = ""
authors = [
    { name = "Ionite", email = "dev@ionite.io" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = []

[project.optional-dependencies]
cuda = []
cpu = []

[tool.setuptools.dynamic]
version = {attr = "inference.__version__"}

[tool.setuptools.packages.find]
where = ["src/"]
include = [
    "inference_core_nodes.*"
]

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"
