[project]
name = "inference-core-nodes"
dynamic = ["version"]
description = ""
authors = [
    { name = "Ionite", email = "dev@ionite.io" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "Pillow",
    "opencv-python>=4.7.0.72",
    "scipy",
    "scikit-image",
    "python-dateutil",
    "mediapipe",
    "svglib",
    "fvcore",
    "yapf",
    "omegaconf",
    "ftfy",
    "addict",
    "yacs",
    "trimesh[easy]",
    "albumentations",
    "scikit-learn"
]

[project.optional-dependencies]
cpu = []
cuda = [
    "onnxruntime-gpu"
]
cuda-12 = [
    # CUDA 12, Python 3.10, Windows
    "onnxruntime-gpu @ https://aiinfra.pkgs.visualstudio.com/PublicPackages/_apis/packaging/feeds/9387c3aa-d9ad-4513-968c-383f6f7f53b8/pypi/packages/onnxruntime-gpu/versions/1.17.1/onnxruntime_gpu-1.17.1-cp310-cp310-win_amd64.whl/content; platform_system == 'Windows'; python_version == '3.10'",
    # CUDA 12, Python 3.10, Linux
    "onnxruntime-gpu @ https://aiinfra.pkgs.visualstudio.com/PublicPackages/_apis/packaging/feeds/9387c3aa-d9ad-4513-968c-383f6f7f53b8/pypi/packages/onnxruntime-gpu/versions/1.17.1/onnxruntime_gpu-1.17.1-cp311-cp311-manylinux_2_28_x86_64.whl/content; platform_system == 'Linux'; python_version == '3.10'",
    # CUDA 12, Python 3.11, Windows
    "onnxruntime-gpu @ https://aiinfra.pkgs.visualstudio.com/PublicPackages/_apis/packaging/feeds/9387c3aa-d9ad-4513-968c-383f6f7f53b8/pypi/packages/onnxruntime-gpu/versions/1.17.1/onnxruntime_gpu-1.17.1-cp311-cp311-win_amd64.whl/content; platform_system == 'Windows'; python_version == '3.11'",
    # CUDA 12, Python 3.11, Linux
    "onnxruntime-gpu @ https://aiinfra.pkgs.visualstudio.com/PublicPackages/_apis/packaging/feeds/9387c3aa-d9ad-4513-968c-383f6f7f53b8/pypi/packages/onnxruntime-gpu/versions/1.17.1/onnxruntime_gpu-1.17.1-cp311-cp311-manylinux_2_28_x86_64.whl/content; platform_system == 'Linux'; python_version == '3.11'",
    # CUDA 12, Python 3.12, Windows
    "onnxruntime-gpu @ https://aiinfra.pkgs.visualstudio.com/PublicPackages/_apis/packaging/feeds/9387c3aa-d9ad-4513-968c-383f6f7f53b8/pypi/packages/onnxruntime-gpu/versions/1.17.1/onnxruntime_gpu-1.17.1-cp312-cp312-win_amd64.whl/content; platform_system == 'Windows'; python_version == '3.12'",
    # CUDA 12, Python 3.12, Linux
    "onnxruntime-gpu @ https://aiinfra.pkgs.visualstudio.com/PublicPackages/_apis/packaging/feeds/9387c3aa-d9ad-4513-968c-383f6f7f53b8/pypi/packages/onnxruntime-gpu/versions/1.17.1/onnxruntime_gpu-1.17.1-cp312-cp312-manylinux_2_28_x86_64.whl/content; platform_system == 'Linux'; python_version == '3.12'"
]
directml = [
    "onnxruntime-directml"
]
rocm = [
    "onnxruntime-gpu"
]

[tool.setuptools.dynamic]
version = {attr = "inference.__version__"}

[tool.setuptools.packages.find]
where = ["src/"]
include = [
    "inference_core_nodes.*"
]

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"
